Add more standard colors and dysplay applications

--- a/Viewsonic-VP2785-4K-MCCS/Viewsonic-VP2785-4K-MCCS.csproj
+++ b/Viewsonic-VP2785-4K-MCCS/Viewsonic-VP2785-4K-MCCS.csproj
@@ -53,7 +53,7 @@
     <Compile Include="FeatureValuesEnum.cs" />
     <Compile Include="FeatureValuesRange.cs" />
     <Compile Include="DelaySecondsAttribute.cs" />
-    <Compile Include="Enums.cs" />
+    <Compile Include="FeatureEnums.cs" />
     <Compile Include="Error.cs" />
     <Compile Include="NativeMethods.cs" />
     <Compile Include="MonitorConfiguration.cs" />
