Skip unreadable features without throwing exception

--- a/src/Viewsonic-VP2785-4K-MCCS/Viewsonic-VP2785-4K-MCCS.csproj
+++ b/src/Viewsonic-VP2785-4K-MCCS/Viewsonic-VP2785-4K-MCCS.csproj
@@ -49,9 +49,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Feature.cs" />
-    <Compile Include="Features.cs" />
+    <Compile Include="MonitorFeatures.cs" />
     <Compile Include="FeaturePIPPosition.cs" />
-    <Compile Include="FeatureEnumeration.cs" />
+    <Compile Include="FeatureEnum.cs" />
     <Compile Include="FeatureRange.cs" />
     <Compile Include="FeatureEnumerations.cs" />
     <Compile Include="Capabilities.cs" />
